manifest/c-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ncea-14-nzdev-org-serve
  namespace: ncea-14
spec:
  selector:
    app: node
  ports:
  - name: http
    targetPort: 8080
    port: 80
